Build navbar & header

--- a/sections.html
+++ b/sections.html
@@ -230,7 +230,7 @@
         <div class="content-center">
           <div class="container">
             <div class="row">
-              <div class="col-md-8 ml-auto mr-auto text-center">
+              <div class="col-md-8 text-right">
                 <h1 class="title"> Find your next trip</h1>
                 <h5 class="description">Now you have no excuses, it's time to surprise your clients, your competitors, and why not, the world. You probably won't have a better chance to show off all your potential if it's not by designing a website for your own agency or web studio.</h5>
                 <br />
