Build home page

--- a/home.html
+++ b/home.html
@@ -65,7 +65,7 @@
     </div>
   </nav>
   <!-- End Navbar -->
-  <div class="wrapper" style="background-color: #000000">
+  <div class="wrapper">
 
     <div class="page-header section-dark" style="background-image: url('./assets/img/homepage-moutain4.jpg')">
       <div class="content-center">
@@ -77,41 +77,301 @@
               <h5> <b> I'm on my road, hope to meet you! </b> </h5>
             </div>
           </div>
-
-<!--           <div class="title-brand">
-            <h1 class="presentation-title"> <span style="font-size: 0.8em; color:#ffffff"> Hi! I'm Cherish </span> </h1>
-          </div>
-          <h2 class="presentation-subtitle text-center"> I am on my road. </h2> -->
         </div>
       </div>
     </div>
   </div>
 
+    <!--     *********    Project     *********      -->
+    <div class="projects-2 section section-dark">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 ml-auto mr-auto text-center">
+            <h2 class="title"> Some of My Projects </h2>
+            <h5 class="description"> <b> Click here to view more projects </b> </h5>
+          </div>
+        </div>
+        <div class="space-top"></div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card card-plain">
+              <div class="card-img-top">
+                <a href="http://www.creative-tim.com/product/paper-kit">
+                  <img class="img" src="./assets/img/sections/opt_pk_thumbnail.jpg" />
+                </a>
+              </div>
+              <div class="card-body">
+                <a href="http://www.creative-tim.com/product/paper-kit" target="_blank">
+                  <h4 class="card-title">Paper Kit Free</h4>
+                </a>
+                <h6 class="card-category text-muted">Free Ui kit</h6>
+                <p class="card-description">
+                  Paper Kit is a free Bootstrap UI kit that can get you going in a new creative direction! To say the least, it's different since it's not material, flat or iOS inspired.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card card-plain">
+              <div class="card-img-top">
+                <a href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro">
+                  <img class="img" src="./assets/img/sections/opt_lbd_pro_new_thumbnail.jpg" />
+                </a>
+              </div>
+              <div class="card-body">
+                <a href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro" target="_blank">
+                  <h4 class="card-title">Light Bootstrap Dashboard </h4>
+                </a>
+                <h6 class="card-category text-muted">Premium template</h6>
+                <p class="card-description">
+                  Light Bootstrap Dashboard PRO is a Bootstrap Admin Theme designed to look simple and beautiful. Forget about boring dashboards and grab yourself a copy to kickstart new project!
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card card-plain">
+              <div class="card-img-top">
+                <a href="https://www.creative-tim.com/product/get-shit-done-pro">
+                  <img class="img" src="./assets/img/sections/opt_gsdk_new_thumbnail.jpg" />
+                </a>
+              </div>
+              <div class="card-body">
+                <a href="https://www.creative-tim.com/product/get-shit-done-pro" target="_blank">
+                  <h4 class="card-title">Get Shit Done Kit Pro</h4>
+                </a>
+                <h6 class="card-category text-muted">Premium UI kit</h6>
+                <p class="card-description">
+                  Get Shit Done Kit Pro it's a Bootstrap Kit that comes with a huge number of customisable components. They are pixel perfect, light and easy to use and combine with other elements.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--     *********    END Projects      *********      -->
+    <!--     *********     Tech Blog      *********      -->
+    <div class="blog-3 section-dark">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-10 ml-auto mr-auto">
+            <h2 class="title text-center">Latest Blogposts</h2>
+            <br />
 
+            <div class="card card-plain card-blog">
+              <div class="row">
+                <div class="col-md-4">
+                  <div class="card-image">
+                    <img class="img" src="./assets/img/sections/jeff-sheldon.jpg" />
+                  </div>
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h6 class="card-category text-info">
+                      <i class="nc-icon nc-bulb-63"></i> Technology / Unity </h6>
+                    <h3 class="card-title">
+                      <a href="#pablo" class="text-primary">SoundCloud says it’s going to survive, but how?</a>
+                    </h3>
+                    <p class="card-description">
+                      No matter what happens — funding versus acquisition versus who knows what — Ljung says SoundCloud is not going away “anytime in the foreseeable future.” I hope that’s true, but I can’t help but feel a bit skeptical. — and…
+                      <a href="#pablo" class="text-info"> Read More </a>
+                    </p>
+                    <p class="author">
+                      11 days ago
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="card card-plain card-blog">
+              <div class="row">
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h6 class="card-category text-danger">
+                      <i class="fa fa-cutlery"></i> Food
+                    </h6>
+                    <h3 class="card-title" style="color: #ffffff">
+                      <a href="#pablo" class="text-danger">Uber acqui-hires social app studio Swipe Labs</a>
+                    </h3>
+                    <p class="card-description">
+                      These issues might be making it a bit harder for Uber to hire right now in the competitive Silicon Valley job market. Acqui-hiring companies like it’s doing here with Swipe Labs lets it roll up a bunch of good talent — and…
+                      <a href="#pablo" class="text-danger"> Read More </a>
+                    </p>
+                    <p class="author">
+                      2 days ago
+                    </p>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <div class="card-image">
+                    <a href="#pablo">
+                      <img class="img" src="./assets/img/sections/rawpixel-comm.jpg" />
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="card card-plain card-blog">
+              <div class="row">
+                <div class="col-md-4">
+                  <div class="card-image">
+                    <a href="#pablo">
+                      <img class="img" src="./assets/img/sections/jeremy-yap.jpg" />
+                    </a>
+                  </div>
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h6 class="card-category text-success">
+                      <i class="nc-icon nc-istanbul"></i> Travel
+                    </h6>
+                    <h3 class="card-title">
+                      <a href="#pablo" class="text-success">HBO and Netflix lead this year’s nominations</a>
+                    </h3>
+                    <p class="card-description">
+                      Streaming services once again top the list of this year’s Emmy nominations – another indicator of the shift in how today’s consumers are watching TV. HBO, which has been available.
+                      <a href="#pablo" class="text-success"> Read More </a>
+                    </p>
+                    <p class="author">
+                      4 Jul 2017
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="card card-plain card-blog">
+              <div class="row">
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h6 class="card-category text-warning">
+                      <i class="nc-icon nc-headphones"></i> Music
+                    </h6>
+                    <h3 class="card-title">
+                      <a href="#pablo" class="text-warning">Uber acqui-hires social app studio Swipe Labs</a>
+                    </h3>
+                    <p class="card-description">
+                      These issues might be making it a bit harder for Uber to hire right now in the competitive Silicon Valley job market. Acqui-hiring companies like it’s doing here with Swipe Labs lets it roll up a bunch of good talent — and…
+                      <a href="#pablo" class="text-warning"> Read More </a>
+                    </p>
+                    <p class="author">
+                      2 days ago
+                    </p>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <div class="card-image">
+                    <a href="#pablo">
+                      <img class="img" src="./assets/img/sections/rawpixel-comm.jpg" />
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="card card-plain card-blog">
+              <div class="row">
+                <div class="col-md-4">
+                  <div class="card-image">
+                    <a href="#pablo">
+                      <img class="img" src="./assets/img/sections/jeremy-yap.jpg" />
+                    </a>
+                  </div>
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h6 class="card-category text-primary">
+                      <i class="nc-icon nc-book-bookmark"></i> Book
+                    </h6>
+                    <h3 class="card-title">
+                      <a href="#pablo" class="text-primary">HBO and Netflix lead this year’s nominations</a>
+                    </h3>
+                    <p class="card-description">
+                      Streaming services once again top the list of this year’s Emmy nominations – another indicator of the shift in how today’s consumers are watching TV. HBO, which has been available.
+                      <a href="#pablo" class="text-primary"> Read More </a>
+                    </p>
+                    <p class="author">
+                      4 Jul 2017
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  <!-- END Tech Blog -->
   <!-- Footer -->
-  <footer class="footer footer-black  footer-white ">
+    <footer class="footer footer-black footer-big">
     <div class="container">
       <div class="row">
-        <nav class="footer-nav">
-          <ul>
-            <li>
-              <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>
-            </li>
-            <li>
-              <a href="http://blog.creative-tim.com/" target="_blank">Blog</a>
-            </li>
-            <li>
-              <a href="https://www.creative-tim.com/license" target="_blank">Licenses</a>
-            </li>
-          </ul>
-        </nav>
-        <div class="credits ml-auto">
-          <span class="copyright">
-            ©
-            <script>
-              document.write(new Date().getFullYear())
-            </script>, made with <i class="fa fa-heart heart"></i> by Creative Tim
-          </span>
+        <div class="col-md-4 col-sm-4 ml-auto mr-auto">
+          <div class="logo text-center">
+            <h3> BBWOLF BLOG </h3>
+          </div>
+        </div>
+        <div class="col-md-6 offset-md-2 col-sm-8">
+          <div class="links">
+            <ul>
+              <li>
+                <a href="#paper-kit">
+                  Home
+                </a>
+              </li>
+              <li>
+                <a href="#paper-kit">
+                  Project
+                </a>
+              </li>
+              <li>
+                <a href="#paper-kit">
+                  Tech
+                </a>
+              </li>
+              <li>
+                <a href="#paper-kit">
+                  Travel
+                </a>
+              </li>
+              <li>
+                <a href="#paper-kit">
+                  Food
+                </a>
+              </li>
+              <li>
+                <a href="#paper-kit">
+                  Book
+                </a>
+              </li>
+              <li>
+                <a href="#paper-kit">
+                  Music
+                </a>
+              </li>
+              <li>
+                <a href="#paper-kit">
+                  About me
+                </a>
+              </li>
+            </ul>
+            <hr />
+            <div class="copyright">
+              <div class="pull-left">
+                ©
+                <script>
+                  document.write(new Date().getFullYear())
+                </script>, made with <i class="fa fa-heart heart"></i> in New York
+              </div>
+              <div class="pull-right">
+                By Cherish Zhao
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
