--- a/home.html
+++ b/home.html
@@ -157,6 +157,7 @@
         <div class="row">
           <div class="col-md-10 ml-auto mr-auto">
             <h2 class="title text-center">Latest Blogposts</h2>
+            <h5 class="description text-center"> <b> Click here to view more blogposts about Tech | Life </b> </h5>
             <br />
 
             <div class="card card-plain card-blog">
