--- a/home.html
+++ b/home.html
@@ -14,13 +14,13 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
   <!-- CSS Files -->
-  <link href="./bbwolf-blog/assets/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="./bbwolf-blog/assets/css/paper-kit.css?v=2.2.2" rel="stylesheet" />
+  <link href="./assets/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="./assets/css/paper-kit.css?v=2.2.2" rel="stylesheet" />
   <!-- CSS Just for demo purpose, don't include it in your project -->
-  <link href="./bbwolf-blog/assets/demo/demo.css" rel="stylesheet" />
+  <link href="./assets/demo/demo.css" rel="stylesheet" />
 
   <!-- Custom css style -->
-  <link href="./bbwolf-blog/assets/css/common.css" rel="stylesheet">
+  <link href="./assets/css/common.css" rel="stylesheet">
 </head>
 
 <body class="presentation-page sidebar-collapse">
@@ -378,26 +378,26 @@
     </div>
   </footer>
   <!--   Core JS Files   -->
-  <script src="./bbwolf-blog/assets/js/core/jquery.min.js" type="text/javascript"></script>
-  <script src="./bbwolf-blog/assets/js/core/popper.min.js" type="text/javascript"></script>
-  <script src="./bbwolf-blog/assets/js/core/bootstrap.min.js" type="text/javascript"></script>
+  <script src="./assets/js/core/jquery.min.js" type="text/javascript"></script>
+  <script src="./assets/js/core/popper.min.js" type="text/javascript"></script>
+  <script src="./assets/js/core/bootstrap.min.js" type="text/javascript"></script>
   <!--  Plugin for Switches, full documentation here: http://www.jque.re/plugins/version3/bootstrap.switch/ -->
-  <script src="./bbwolf-blog/assets/js/plugins/bootstrap-switch.js"></script>
+  <script src="./assets/js/plugins/bootstrap-switch.js"></script>
   <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-  <script src="./bbwolf-blog/assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
+  <script src="./assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
   <!--	Plugin for Tags, full documentation here: https://github.com/bootstrap-tagsinput/bootstrap-tagsinputs  -->
-  <script src="./bbwolf-blog/assets/js/plugins/bootstrap-tagsinput.js"></script>
+  <script src="./assets/js/plugins/bootstrap-tagsinput.js"></script>
   <!--	Plugin for Select, full documentation here: http://silviomoreto.github.io/bootstrap-select -->
-  <script src="./bbwolf-blog/assets/js/plugins/bootstrap-selectpicker.js" type="text/javascript"></script>
+  <script src="./assets/js/plugins/bootstrap-selectpicker.js" type="text/javascript"></script>
   <!--  Vertical nav - dots -->
   <!--  Photoswipe files -->
-  <script src="./bbwolf-blog/assets/js/plugins/photo_swipe/photoswipe.min.js"></script>
-  <script src="./bbwolf-blog/assets/js/plugins/photo_swipe/photoswipe-ui-default.min.js"></script>
-  <script src="./bbwolf-blog/assets/js/plugins/photo_swipe/init-gallery.js"></script>
+  <script src="./assets/js/plugins/photo_swipe/photoswipe.min.js"></script>
+  <script src="./assets/js/plugins/photo_swipe/photoswipe-ui-default.min.js"></script>
+  <script src="./assets/js/plugins/photo_swipe/init-gallery.js"></script>
   <!--  for Jasny fileupload -->
-  <script src="./bbwolf-blog/assets/js/plugins/jasny-bootstrap.min.js"></script>
+  <script src="./assets/js/plugins/jasny-bootstrap.min.js"></script>
   <!-- Control Center for Paper Kit: parallax effects, scripts for the example pages etc -->
-  <script src="./bbwolf-blog/assets/js/paper-kit.js?v=2.2.2" type="text/javascript"></script>
+  <script src="./assets/js/paper-kit.js?v=2.2.2" type="text/javascript"></script>
 </body>
 
 </html>
