--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" href="./assets/img//favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>
-    Paper Kit Pro by Creative Tim
+    BBWOLF BLOG
   </title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
   <!--     Fonts and icons     -->
@@ -40,25 +40,19 @@
       <div class="collapse navbar-collapse" data-nav-image="./assets/img/blurred-image-1.jpg" data-color="orange">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#"> <div class="custom-subtitle"> Projects </div> </a>
+            <a class="nav-link" href="./home.html"> <div class="custom-subtitle"> Home </div> </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"> <div class="custom-subtitle"> Tech </div> </a>
-          </li>
-          <li class="dropdown nav-item">
-              <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">
-              <span class="custom-subtitle"> Life </span> </a>
-              <div class="dropdown-menu dropdown-menu-right dropdown-danger">
-              <a href="./index.html" class="dropdown-item">
-                All Components
-              </a>
-              <a href="http://demos.creative-tim.com/paper-kit-2-pro/docs/1.0/getting-started/introduction.html" class="dropdown-item">
-                Documentation
-              </a>
-            </div>
+            <a class="nav-link" href="./projects.html"> <div class="custom-subtitle"> Projects </div> </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"> <div class="custom-subtitle"> About me </div> </a>
+            <a class="nav-link" href="./tech.html"> <div class="custom-subtitle"> Tech </div> </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./life.html"> <div class="custom-subtitle"> Life </div> </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./Aboutme.html"> <div class="custom-subtitle"> About me </div> </a>
           </li>
         </ul>
       </div>
