--- a/aboutme.html
+++ b/aboutme.html
@@ -59,133 +59,117 @@
     </div>
   </nav>
   <!-- End Navbar -->
-  <!-- Projects -->
-      <div class="project-4 section section-dark">
-        <br />
-        <br />
-        <div class="container">
-          <div class="row">
-            <div class="col-md-8 ml-auto mr-auto text-center">
-              <h2 class="title"> Projects </h2>
-              <h5 class="description">This is the paragraph where you can write more details about your projects. Keep you user engaged by providing meaningful information.</h5>
-            </div>
-          </div>
-          <div class="space-top"></div>
-          <div class="row">
-            <div class="col-md-5 ml-auto">
-              <div class="card" data-background="image" style="background-image: url('./assets/img/sections/sebastien-gabrieles.jpg')">
-                <div class="card-icon">
-                  <i class="nc-icon nc-mobile"></i>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-5 mr-auto">
-              <div class="card card-plain">
-                <div class="card-body">
-                  <h6 class="card-category">Technology</h6>
-                  <a href="#pablo">
-                    <h3 class="card-title">The need of a great product</h3>
-                  </a>
-                  <p class="card-description">Artificial intelligence-focused investment funds are a dime a dozen these days. Everyone knows there’s money to be made from AI, but to capture value, good VCs know they need to back products and not technologies.</p>
-                  <div class="card-footer">
-                    <a href="#pablo" class="btn btn-link btn-neutral">
-                      <i class="fa fa-book" aria-hidden="true"></i> Read More
-                    </a>
-                    <a href="#pablo" class="btn btn-just-icon btn-link btn-neutral">
-                      <i class="fa fa-apple" aria-hidden="true"></i>
-                    </a>
-                    <a href="#pablo" class="btn btn-just-icon btn-link btn-neutral">
-                      <i class="fa fa-android" aria-hidden="true"></i>
-                    </a>
-                    <a href="#pablo" class="btn btn-just-icon btn-link btn-neutral">
-                      <i class="fa fa-windows" aria-hidden="true"></i>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+  <!-- Tab -->
+      <div class="section-dark">
+        <div class="offset-md-2 col-md-8">
           <br/>
-          <hr />
           <br/>
-          <div class="row">
-            <div class="col-md-5 ml-auto">
-              <div class="card card-plain">
-                <div class="card-body">
-                  <h6 class="card-category">Design</h6>
-                  <a href="#pablo">
-                    <h3 class="card-title">The aesthetic quality of a product</h3>
-                  </a>
-                  <p class="card-description">Eventually, the data collected from the grant program could allow the two to play a bit of machine learning moneyball — valuing machine learning engineers without traditional metrics (like having a PhD from Stanford)...</p>
-                  <div class="card-footer">
-                    <a href="#pablo" class="btn btn-link btn-neutral">
-                      <i class="fa fa-book" aria-hidden="true"></i> Read More
-                    </a>
-                    <a href="#pablo" class="btn btn-just-icon btn-link btn-neutral">
-                      <i class="fa fa-apple" aria-hidden="true"></i>
-                    </a>
-                    <a href="#pablo" class="btn btn-just-icon btn-link btn-neutral">
-                      <i class="fa fa-android" aria-hidden="true"></i>
-                    </a>
-                    <a href="#pablo" class="btn btn-just-icon btn-link btn-neutral">
-                      <i class="fa fa-windows" aria-hidden="true"></i>
-                    </a>
-                  </div>
+          <br/>
+          <br/>
+          <br/>
+          <h2 class="title text-center"> Resume </h2>
+          <div class="row custom-text-white">
+            <div class="col-md-4 col-sm-4 col-6">
+              <div class="nav-tabs-navigation">
+                <div class="nav-tabs-wrapper">
+                  <ul class="nav nav-tabs flex-column nav-stacked" role="tablist">
+                    <li class="nav-item">
+                      <a class="nav-link custom-subtitle-white active" href="#info" role="tab" data-toggle="tab"> Skill </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link custom-subtitle-white" href="#description" role="tab" data-toggle="tab"> Education </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link custom-subtitle-white" href="#concept" role="tab" data-toggle="tab"> Work Experience </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link custom-subtitle-white" href="#support" role="tab" data-toggle="tab"> Research Experience </a>
+                    </li>
+                  </ul>
                 </div>
               </div>
             </div>
-            <div class="col-md-5 mr-auto">
-              <div class="card" data-background="image" style="background-image: url('./assets/img/sections/john-towner.jpg')">
-                <div class="card-icon">
-                  <i class="nc-icon nc-controller-modern"></i>
+            <div class="col-md-8 col-sm-8 col-6">
+              <!-- Tab panes -->
+              <div class="tab-content">
+                <div class="tab-pane active" id="info">
+                  <p>Larger, yet dramatically thinner. More powerful, but remarkably power efficient. With a smooth metal surface that seamlessly meets the new Retina HD display.</p>
+                  <p>It’s one continuous form where hardware and software function in perfect unison, creating a new generation of phone that’s better by any measure.</p>
                 </div>
-              </div>
-            </div>
-          </div>
-          <hr />
-          <div class="row">
-            <div class="offset-md-1 col-md-4">
-              <div class="card card-plain">
-                <div class="card-img-top">
-                  <a href="http://www.creative-tim.com/product/paper-kit">
-                    <img class="img" src="./assets/img/sections/opt_pk_thumbnail.jpg" />
-                  </a>
+                <div class="tab-pane" id="description">
+                  <p>The first thing you notice when you hold the phone is how great it feels in your hand. The cover glass curves down around the sides to meet the anodized aluminum enclosure in a remarkable, simplified design. </p>
+                  <p>There are no distinct edges. No gaps. Just a smooth, seamless bond of metal and glass that feels like one continuous surface.</p>
                 </div>
-                <div class="card-body">
-                  <a href="http://www.creative-tim.com/product/paper-kit" target="_blank">
-                    <h4 class="card-title">Paper Kit Free</h4>
-                  </a>
-                  <h6 class="card-category text-muted">Free Ui kit</h6>
-                  <p class="card-description">
-                    Paper Kit is a free Bootstrap UI kit that can get you going in a new creative direction! To say the least, it's different since it's not material, flat or iOS inspired.
-                  </p>
+                <div class="tab-pane" id="concept">
+                  <p>It’s one continuous form where hardware and software function in perfect unison, creating a new generation of phone that’s better by any measure.</p>
+                  <p>Larger, yet dramatically thinner. More powerful, but remarkably power efficient. With a smooth metal surface that seamlessly meets the new Retina HD display. </p>
                 </div>
-              </div>
-            </div>
-            <div class="offset-md-2 col-md-4">
-              <div class="card card-plain">
-                <div class="card-img-top">
-                  <a href="http://www.creative-tim.com/product/paper-kit">
-                    <img class="img" src="./assets/img/sections/opt_pk_thumbnail.jpg" />
-                  </a>
+                <div class="tab-pane" id="support">
+                  <p>From the seamless transition of glass and metal to the streamlined profile, every detail was carefully considered to enhance your experience. So while its display is larger, the phone feels just right.</p>
+                  <p>It’s one continuous form where hardware and software function in perfect unison, creating a new generation of phone that’s better by any measure.</p>
                 </div>
-                <div class="card-body">
-                  <a href="http://www.creative-tim.com/product/paper-kit" target="_blank">
-                    <h4 class="card-title">Paper Kit Free</h4>
-                  </a>
-                  <h6 class="card-category text-muted">Free Ui kit</h6>
-                  <p class="card-description">
-                    Paper Kit is a free Bootstrap UI kit that can get you going in a new creative direction! To say the least, it's different since it's not material, flat or iOS inspired.
-                  </p>
+                <div class="tab-pane" id="extra">
+                  <p>It’s one continuous form where hardware and software function in perfect unison, creating a new generation of phone that’s better by any measure.</p>
+                  <p>Larger, yet dramatically thinner. More powerful, but remarkably power efficient. With a smooth metal surface that seamlessly meets the new Retina HD display. </p>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+  <!-- END Tab -->
+  <div class="section-dark">
+    <div class="offset-md-2 col-md-8">
+      <br />
+      <hr />
+      <br />
     </div>
-    <!--     *********    END PROJECTS 4      *********      -->
-  <!-- END Projects -->
+  </div>
+  <!-- Calendar -->
+  <div class="section-dark custom-text-white">
+      <div class="offset-md-2 col-md-8">
+        <div class="row">
+          <h2 class="title text-center">
+            To-do List
+          </h2>
+        </div>
+        <div class="row">
+          <div class="col-2 text-right">
+            <h1 class="display-4"><span class="badge badge-secondary">23</span></h1>
+            <h2>OCT</h2>
+          </div>
+          <div class="col-10">
+            <h3 class="text-uppercase"> Ice Cream Social </h3>
+            <ul class="list-inline">
+                <li class="list-inline-item"><i class="fa fa-calendar-o" aria-hidden="true"></i> Monday</li>
+              <li class="list-inline-item"><i class="fa fa-clock-o" aria-hidden="true"></i> 12:30 PM - 2:00 PM</li>
+              <li class="list-inline-item"><i class="fa fa-location-arrow" aria-hidden="true"></i> Cafe</li>
+            </ul>
+            <p>Lorem ipsum dolsit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
+        </div>
+        <div class="row row-striped">
+          <div class="col-2 text-right">
+            <h1 class="display-4"><span class="badge badge-secondary">27</span></h1>
+            <h2>OCT</h2>
+          </div>
+          <div class="col-10">
+            <h3 class="text-uppercase"> Operations Meeting </h3>
+            <ul class="list-inline">
+                <li class="list-inline-item"><i class="fa fa-calendar-o" aria-hidden="true"></i> Friday</li>
+              <li class="list-inline-item"><i class="fa fa-clock-o" aria-hidden="true"></i> 2:30 PM - 4:00 PM</li>
+              <li class="list-inline-item"><i class="fa fa-location-arrow" aria-hidden="true"></i> Room 4019</li>
+            </ul>
+            <p>Lorem ipsum dolsit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
+        </div>
+        <br />
+        <br />
+        <br />
+        <br />
+      </div>
+  </div>
+  <!-- END Calender -->
   <!-- Footer -->
     <footer class="footer footer-black footer-big">
     <div class="container">
