--- a/template.html
+++ b/template.html
@@ -52,7 +52,7 @@
             <a class="nav-link" href="./life.html"> <div class="custom-subtitle"> Life </div> </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./Aboutme.html"> <div class="custom-subtitle"> About me </div> </a>
+            <a class="nav-link" href="./aboutme.html"> <div class="custom-subtitle"> About me </div> </a>
           </li>
         </ul>
       </div>
