--- a/aboutme.html
+++ b/aboutme.html
@@ -29,6 +29,7 @@
     <div class="container">
       <div class="navbar-translate">
         <a class="navbar-brand" style="font-size: 2em; color: #ffffff;" rel="tooltip" title="BBWOLF BLOG" data-placement="bottom" target="_blank">
+          <img src="./assets/img/wolf_icon.svg" alt="Created by Louie Greco" width="50px" height="50px" />
           BBWOLF BLOG
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
