--- a/home.html
+++ b/home.html
@@ -29,6 +29,7 @@
     <div class="container">
       <div class="navbar-translate">
         <a class="navbar-brand" style="font-size: 2em; color: #ffffff;" rel="tooltip" title="BBWOLF BLOG" data-placement="bottom" target="_blank">
+          <img src="./assets/img/wolf_icon.svg" alt="Created by Louie Greco" width="50px" height="50px" />
           BBWOLF BLOG
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
@@ -65,7 +66,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-8 jumbotron text-left">
-              <h1 class="title"> <b> Welcome to my blog! </b> </h1>
+              <h1 class="title"> <b> Cherish Zhao </b> <img src="./assets/img/wolf_icon.svg" alt="Created by Louie Greco" width="80px" height="80px" /> </h1>
               <h5>  <b> Hi! My name is Cherish, currently a master student in Computer Science. I'm a full stack developer, and also a world explorer! </b> </h5>
               <h5> <b> I'm on my road, hope to meet you! </b> </h5>
             </div>
